# sphinxcontrib-bibtex-urn

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  justfile  pyproject.toml
.github/: .markdownlint-cli2.yaml  .yamllint.yaml  CODEOWNERS  dependabot.yml  labeler.yml
.github/agents/: version-bump.md
.github/workflows/: build.yml  copilot-setup-steps.yml  docs.yml  get-python-versions.yml  labeler.yml  pages.yml  release.yml  test.yml
docs/: api.md  bibliography.bib  changelog.md  code_of_conduct.md  conf.py  contributing.md  examples.md  index.md  security.md  usage.md
sphinxcontrib_bibtex_urn/: __init__.py  styles.py
sphinxcontrib_urn/: __init__.py
tests/: test_extension.py  test_integration.py  test_styles.py
